make mobile responsive

--- a/src/components/GlitchText/GlitchText.less
+++ b/src/components/GlitchText/GlitchText.less
@@ -16,7 +16,8 @@
         letter-spacing: 17px;
         font-size: 1vw;
         @media all and (max-width: 520px) {
-          font-size: .7rem;
+          font-size: 17px;
+          letter-spacing: 3px;
         }
     }
 
@@ -39,7 +40,7 @@
         clip-path: inset(var(--clip-top) 0 var(--clip-bottom) 0);
         animation: stack 750ms cubic-bezier(.46,.29,0,1.24) 1 backwards calc(var(--index) * 20ms), glitch 3s ease infinite 1s alternate-reverse;
         @media all and (max-width: 520px) {
-          font-size: 1.3rem;
+          font-size: 12vw;
         }
       }
       
