allow refresh by swiping down

--- a/src/App.less
+++ b/src/App.less
@@ -2,7 +2,7 @@ html, body {
   // Deactivate android swipe behavior
   // eg: swipe flet to go back in the history 
   // or swipe down to reload the page
-  overscroll-behavior: none;
+  // overscroll-behavior: none;
 }
 
 body {
