--- a/src/App.less
+++ b/src/App.less
@@ -70,3 +70,17 @@ body {
   top: 12px !important;
   right: 12px !important;
 }
+
+/* Tooltip custom */
+.ant-tooltip {
+  color: rgba(255, 255, 255, 0.75);
+  .ant-tooltip-inner {
+    color: #000;
+    background-color: rgba(255, 255, 255, 0.85);
+  }
+  .ant-tooltip-arrow {
+    &:after {
+      background-color: rgba(255, 255, 255, 0.8);
+    }
+  }
+}
