make it cooler?

--- a/src/components/LanguageDropDown/LanguageDropDown.less
+++ b/src/components/LanguageDropDown/LanguageDropDown.less
@@ -3,7 +3,7 @@
   z-index: 10;
   top: 5px;
   left: 0;
-  color: rgba(255,255,255,1);
+  color: rgba(255,255,255,.5);
   margin: 15px 25px;
   font-weight: 300;
   font-size: 20px;
