--- a/src/components/GlitchText/GlitchText.less
+++ b/src/components/GlitchText/GlitchText.less
@@ -33,6 +33,7 @@
         grid-column-start: 1;
         font-size: 12vw;
         line-height: 8vw;
+        letter-spacing: -5px;
         --stack-height: calc(100% / var(--stacks) - 1px);
         --inverse-index: calc(calc(var(--stacks) - 1) - var(--index));
         --clip-top: calc(var(--stack-height) * var(--index));
