--- a/src/pages/Main.less
+++ b/src/pages/Main.less
@@ -12,21 +12,24 @@
         text-decoration: none;
         letter-spacing: 3px;
         transition: color .3s;
-        padding: 0 7px;
-        transition: transform .3s ease-in-out; 
+        padding: 0 7px; 
         @media all and (max-width: 520px) {
             padding: 0 30px;
           }
         &:hover {
             text-decoration: none;
             opacity: .75;
-            transform: rotate(1turn);
         }
         .instaLogo {
             width: 23px;
         }
         .telegramLogo {
             width: 25px;
+            padding-left: 4px;
+        }
+        .soundcloudLogo {
+            width: 35px;
+            height: 23px;
             padding-left: 4px;
         }
         .emailLogo {
