mobile text update

--- a/src/components/GlitchText/GlitchText.less
+++ b/src/components/GlitchText/GlitchText.less
@@ -42,6 +42,8 @@
         animation: stack 750ms cubic-bezier(.46,.29,0,1.24) 1 backwards calc(var(--index) * 20ms), glitch 3s ease infinite 1s alternate-reverse;
         @media all and (max-width: 520px) {
           font-size: 13vw;
+          line-height: 9vw;
+          letter-spacing: -1px;
         }
       }
       
